--- a/consul/values.yaml
+++ b/consul/values.yaml
@@ -465,7 +465,7 @@ ingress:
 ## Prometheus Exporter / Metrics
 ##
 metrics:
-  enabled: true
+  enabled: false
   ## Bitnami HashiCorp Consul Prometheus Exporter image
   ## ref: https://hub.docker.com/r/bitnami/consul-exporter/tags/
   ##
@@ -520,7 +520,7 @@ metrics:
   serviceMonitor:
     ## If the operator is installed in your cluster, set to true to create a Service Monitor Entry
     ##
-    enabled: true
+    enabled: false
     ## Specify the namespace in which the serviceMonitor resource will be created
     ##
     # namespace: ""
