--- a/kafka/values.yaml
+++ b/kafka/values.yaml
@@ -335,7 +335,7 @@ readinessProbe:
 metrics:
   ## Prometheus Kafka Exporter: exposes complimentary metrics to JMX Exporter
   kafka:
-    enabled: true
+    enabled: false
 
     ## Bitnami Kafka exporter image
     ## ref: https://hub.docker.com/r/bitnami/kafka-exporter/tags/
