--- a/zookeeper/values.yaml
+++ b/zookeeper/values.yaml
@@ -219,7 +219,7 @@ readinessProbe:
 ## Prometheus Exporter / Metrics
 ##
 metrics:
-  enabled: true
+  enabled: false
 
   image:
     registry: docker.io
