--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -494,7 +494,7 @@ volumePermissions:
 metrics:
   ## @param metrics.enabled Start a sidecar prometheus exporter to expose Jenkins metrics
   ##
-  enabled: true
+  enabled: false
   ## Bitnami Jenkins Exporter image
   ## ref: https://hub.docker.com/r/bitnami/jenkins-exporter/tags/
   ## @param metrics.image.registry Jenkins Exporter image registry
@@ -570,7 +570,7 @@ metrics:
   serviceMonitor:
     ## @param metrics.serviceMonitor.enabled Create ServiceMonitor resource(s) for scraping metrics using PrometheusOperator
     ##
-    enabled: true
+    enabled: false
     ## @param metrics.serviceMonitor.namespace The namespace in which the ServiceMonitor will be created
     ##
     namespace:
