--- a/memcached/values.yaml
+++ b/memcached/values.yaml
@@ -154,7 +154,7 @@ arguments:
 
 
 metrics:
-  enabled: true
+  enabled: false
   image:
     registry: docker.io
     repository: kubegemsapp/memcached-exporter
@@ -171,13 +171,13 @@ metrics:
     requests: {}
 
 exporter:
-  enabled: true
+  enabled: false
   # prometheus port & scrape path
   port: 9150
   scrapePath: /metrics
   serviceMonitor:
     # When set true then use a ServiceMonitor to configure scraping
-    enabled: true
+    enabled: false
     # Set the namespace the ServiceMonitor should be deployed
     # namespace: monitoring
     # Set how frequently Prometheus should scrape
