--- a/minio/values.yaml
+++ b/minio/values.yaml
@@ -623,7 +623,7 @@ metrics:
   serviceMonitor:
     ## If the operator is installed in your cluster, set to true to create a Service Monitor Entry
     ##
-    enabled: true
+    enabled: false
     ## Specify the namespace in which the serviceMonitor resource will be created
     ##
     # namespace: ""
