--- a/mysql/values.yaml
+++ b/mysql/values.yaml
@@ -143,7 +143,7 @@ slave:
     failureThreshold: 3
 
 metrics:
-  enabled: true
+  enabled: false
   image:
     registry: docker.io
     repository: kubegemsapp/mysqld-exporter
