--- a/nacos/values.yaml
+++ b/nacos/values.yaml
@@ -48,9 +48,9 @@ persistence:
 
 service:
   #type: ClusterIP
-  type: NodePort
+  type: ClusterIP
   port: 8848
-  nodePort: 30000
+  #nodePort: 30000
 
 
 ingress:
