--- a/postgresql/values.yaml
+++ b/postgresql/values.yaml
@@ -737,7 +737,7 @@ tls:
 ## Configure metrics exporter
 ##
 metrics:
-  enabled: true
+  enabled: false
   # resources: {}
   service:
     type: ClusterIP
@@ -746,7 +746,7 @@ metrics:
     #  prometheus.io/port: '9187'
     loadBalancerIP:
   serviceMonitor:
-    enabled: true
+    enabled: false
     additionalLabels: {}
     # namespace: monitoring
     # interval: 30s
