--- a/cmak/Chart.yaml
+++ b/cmak/Chart.yaml
@@ -4,17 +4,17 @@ description: Manage and vizualize Kafka clusters with CMAK (prev. Kafka Manager)
 home: https://github.com/eshepelyuk/cmak-operator
 icon: https://www.vectorlogo.zone/logos/kubernetes/kubernetes-icon.svg
 keywords:
-- message
-- web
+  - message
+  - web
 maintainers:
-- email: eshepelyuk@gmail.com
-  name: Ievgenii Shepeliuk
-  url: https://github.com/eshepelyuk
-- email: sre@cloudmidns.com
-  name: KubeGems
+  - email: eshepelyuk@gmail.com
+    name: Ievgenii Shepeliuk
+    url: https://github.com/eshepelyuk
+  - email: support@kubegems.io
+    name: KubeGems
 name: cmak
 sources:
-- https://github.com/yahoo/CMAK
-- https://github.com/hleb-albau/kafka-manager-docker
+  - https://github.com/yahoo/CMAK
+  - https://github.com/hleb-albau/kafka-manager-docker
 type: application
 version: 1.7.0
