--- a/mongodb/Chart.yaml
+++ b/mongodb/Chart.yaml
@@ -3,24 +3,25 @@ annotations:
 apiVersion: v2
 appVersion: 4.4.6
 dependencies:
-- name: common
-  repository: https://charts.bitnami.com/bitnami
-  tags:
-  - bitnami-common
-  version: 1.x.x
-description: NoSQL document-oriented database that stores JSON-like documents with
+  - name: common
+    repository: https://charts.bitnami.com/bitnami
+    tags:
+      - bitnami-common
+    version: 1.x.x
+description:
+  NoSQL document-oriented database that stores JSON-like documents with
   dynamic schemas, simplifying the integration of data in content-driven applications.
 home: https://github.com/bitnami/charts/tree/master/bitnami/mongodb
 icon: https://bitnami.com/assets/stacks/mongodb/img/mongodb-stack-220x234.png
 keywords:
-- nosql
+  - nosql
 maintainers:
-- email: containers@bitnami.com
-  name: Bitnami
-- email: sre@bitnami.com
-  name: KubeGems
+  - email: containers@bitnami.com
+    name: Bitnami
+  - email: support@kubegems.io
+    name: KubeGems
 name: mongodb
 sources:
-- https://github.com/bitnami/bitnami-docker-mongodb
-- https://mongodb.org
+  - https://github.com/bitnami/bitnami-docker-mongodb
+  - https://mongodb.org
 version: 10.20.5
