--- a/zookeeper/Chart.yaml
+++ b/zookeeper/Chart.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 appVersion: 3.5.6
 description: Zookeeper Service, Support single node and multi node
-engine: gotpl
 home: https://zookeeper.apache.org/
 icon: https://bitnami.com/assets/stacks/zookeeper/img/zookeeper-stack-110x117.png
 keywords:
-- key-value
+  - key-value
 maintainers:
-- email: sre@cloudmind.com
-  name: KubeGems
+  - email: support@kubegems.io
+    name: KubeGems
 name: zookeeper
 version: 5.2.0
