--- a/elasticsearch/examples/migration/data.yaml
+++ b/elasticsearch/examples/migration/data.yaml
@@ -1,5 +1,4 @@
 ---
-
 replicas: 2
 
 esMajorVersion: 6
@@ -12,6 +11,4 @@ clusterName: "elasticsearch"
 nodeGroup: "data"
 
 roles:
-  master: "false"
-  ingest: "false"
-  data: "true"
+  - data
