--- a/elasticsearch/examples/migration/master.yaml
+++ b/elasticsearch/examples/migration/master.yaml
@@ -1,5 +1,4 @@
 ---
-
 # Temporarily set to 3 so we can scale up/down the old a new cluster
 # one at a time whilst always keeping 3 masters running
 replicas: 1
@@ -14,12 +13,10 @@ clusterName: "elasticsearch"
 nodeGroup: "master"
 
 roles:
-  master: "true"
-  ingest: "false"
-  data: "false"
+  - master
 
 volumeClaimTemplate:
-  accessModes: [ "ReadWriteOnce" ]
+  accessModes: ["ReadWriteOnce"]
   storageClassName: "standard"
   resources:
     requests:
