--- a/elasticsearch/examples/multi/master.yaml
+++ b/elasticsearch/examples/multi/master.yaml
@@ -1,11 +1,6 @@
 ---
-
 clusterName: "multi"
 nodeGroup: "master"
 
 roles:
-  master: "true"
-  ingest: "false"
-  data: "false"
-  ml: "false"
-  remote_cluster_client: "false"
+  - master
