--- a/elasticsearch/examples/openshift/test/goss.yaml
+++ b/elasticsearch/examples/openshift/test/goss.yaml
@@ -1,16 +1,20 @@
 http:
-  http://localhost:9200/_cluster/health:
+  https://localhost:9200/_cluster/health:
     status: 200
     timeout: 2000
+    username: elastic
+    password: "{{ .Env.ELASTIC_PASSWORD }}"
     body:
       - "green"
       - '"number_of_nodes":3'
       - '"number_of_data_nodes":3'
 
-  http://localhost:9200:
+  https://localhost:9200:
     status: 200
     timeout: 2000
+    username: elastic
+    password: "{{ .Env.ELASTIC_PASSWORD }}"
     body:
-      - '"number" : "7.13.2"'
+      - '"number" : "8.1.0"'
       - '"cluster_name" : "elasticsearch"'
       - "You Know, for Search"
