--- a/elasticsearch/examples/security/values.yaml
+++ b/elasticsearch/examples/security/values.yaml
@@ -2,10 +2,12 @@
 clusterName: "security"
 nodeGroup: "master"
 
+createCert: false
+
 roles:
-  master: "true"
-  ingest: "true"
-  data: "true"
+  - master
+  - ingest
+  - data
 
 protocol: https
 
@@ -19,18 +21,6 @@ esConfig:
     xpack.security.http.ssl.enabled: true
     xpack.security.http.ssl.truststore.path: /usr/share/elasticsearch/config/certs/elastic-certificates.p12
     xpack.security.http.ssl.keystore.path: /usr/share/elasticsearch/config/certs/elastic-certificates.p12
-
-extraEnvs:
-  - name: ELASTIC_PASSWORD
-    valueFrom:
-      secretKeyRef:
-        name: elastic-credentials
-        key: password
-  - name: ELASTIC_USERNAME
-    valueFrom:
-      secretKeyRef:
-        name: elastic-credentials
-        key: username
 
 secretMounts:
   - name: elastic-certificates
