--- a/elasticsearch/templates/configmap.yaml
+++ b/elasticsearch/templates/configmap.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.esConfig }}
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -9,6 +10,22 @@ metadata:
     app: "{{ template "elasticsearch.uname" . }}"
 data:
 {{- range $path, $config := .Values.esConfig }}
+  {{ $path }}: |
+{{ $config | indent 4 -}}
+{{- end -}}
+{{- end -}}
+{{- if .Values.esJvmOptions }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ template "elasticsearch.uname" . }}-jvm-options
+  labels:
+    heritage: {{ .Release.Service | quote }}
+    chart: "{{ .Chart.Name }}"
+    app: "{{ template "elasticsearch.uname" . }}"
+data:
+{{- range $path, $config := .Values.esJvmOptions }}
   {{ $path }}: |
 {{ $config | indent 4 -}}
 {{- end -}}
