--- a/cassandra/values.yaml
+++ b/cassandra/values.yaml
@@ -12,7 +12,7 @@
 ## ref: https://hub.docker.com/r/bitnami/cassandra/tags/
 ##
 image:
-  registry: docker.io
+  registry: registry.cn-beijing.aliyuncs.com
   repository: kubegemsapp/cassandra
   ## Bitnami Cassandra image tag
   ## ref: https://github.com/bitnami/bitnami-docker-cassandra#supported-tags-and-respective-dockerfile-links
@@ -170,7 +170,7 @@ persistence:
 volumePermissions:
   enabled: false
   image:
-    registry: docker.io
+    registry: registry.cn-beijing.aliyuncs.com
     repository: kubegemsapp/bitnami-shell
     tag: 10
     pullPolicy: Always
@@ -501,7 +501,7 @@ pdb:
 metrics:
   enabled: false
   image:
-    registry: docker.io
+    registry: registry.cn-beijing.aliyuncs.com
     pullPolicy: IfNotPresent
     repository: kubegemsapp/cassandra-exporter
     tag: 2.3.4-debian-10-r435
