--- a/elasticsearch/values.yaml
+++ b/elasticsearch/values.yaml
@@ -58,7 +58,7 @@ hostAliases: []
 #  - "foo.local"
 #  - "bar.local"
 
-image: "docker.io/kubegemsapp/elasticsearch"
+image: "registry.cn-beijing.aliyuncs.com/kubegemsapp/elasticsearch"
 imageTag: "7.13.2"
 imagePullPolicy: "IfNotPresent"
 
