--- a/istio-bookinfo/templates/microservice-ratings.yaml
+++ b/istio-bookinfo/templates/microservice-ratings.yaml
@@ -40,7 +40,7 @@ spec:
       serviceAccountName: bookinfo-ratings
       containers:
       - name: ratings
-        image: docker.io/kubegemsapp/examples-bookinfo-ratings-v1:1.15.0
+        image: registry.cn-beijing.aliyuncs.com/kubegemsapp/examples-bookinfo-ratings-v1:1.15.0
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 9080
