--- a/kibana/values.yaml
+++ b/kibana/values.yaml
@@ -34,7 +34,7 @@ hostAliases: []
 #  - "foo.local"
 #  - "bar.local"
 
-image: "docker.io/kubegemsapp/kibana"
+image: "registry.cn-beijing.aliyuncs.com/kubegemsapp/kibana"
 imageTag: "7.13.2"
 imagePullPolicy: "IfNotPresent"
 
