--- a/memcached/values.yaml
+++ b/memcached/values.yaml
@@ -15,7 +15,7 @@ replicaCount: 1
 ## ref: https://hub.docker.com/r/bitnami/memcached/tags/
 ##
 image:
-  registry: docker.io
+  registry: registry.cn-beijing.aliyuncs.com
   repository: kubegemsapp/memcached
   tag: 1.5.22-debian-10-r22
   ## Specify a imagePullPolicy
@@ -156,7 +156,7 @@ arguments:
 metrics:
   enabled: false
   image:
-    registry: docker.io
+    registry: registry.cn-beijing.aliyuncs.com
     repository: kubegemsapp/memcached-exporter
     tag: 0.6.0-debian-10-r28
     pullPolicy: IfNotPresent
