--- a/prometheus-elasticsearch-exporter/templates/cert-secret.yaml
+++ b/prometheus-elasticsearch-exporter/templates/cert-secret.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "elasticsearch-exporter.fullname" . }}-cert
+  namespace: {{ .Release.Namespace }}
   labels:
     chart: {{ template "elasticsearch-exporter.chart" . }}
     app: {{ template "elasticsearch-exporter.name" . }}
