--- a/prometheus-elasticsearch-exporter/templates/podsecuritypolicies.yaml
+++ b/prometheus-elasticsearch-exporter/templates/podsecuritypolicies.yaml
@@ -3,6 +3,7 @@ apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
   name: {{ template "elasticsearch-exporter.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     chart: {{ template "elasticsearch-exporter.chart" . }}
     app: {{ template "elasticsearch-exporter.name" . }}
