--- a/prometheus-elasticsearch-exporter/templates/role.yaml
+++ b/prometheus-elasticsearch-exporter/templates/role.yaml
@@ -3,6 +3,7 @@ apiVersion: {{ template "rbac.apiVersion" . }}
 kind: Role
 metadata:
   name: {{ template "elasticsearch-exporter.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     chart: {{ template "elasticsearch-exporter.chart" . }}
     app: {{ template "elasticsearch-exporter.name" . }}
