--- a/prometheus-elasticsearch-exporter/templates/serviceaccount.yaml
+++ b/prometheus-elasticsearch-exporter/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ template "elasticsearch-exporter.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     chart: {{ template "elasticsearch-exporter.chart" . }}
     app: {{ template "elasticsearch-exporter.name" . }}
