--- a/prometheus-mysql-exporter/Chart.yaml
+++ b/prometheus-mysql-exporter/Chart.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 appVersion: v0.12.1
 description: A Helm chart for prometheus mysql exporter with cloudsqlproxy
 home: https://github.com/prometheus/mysqld_exporter
+keywords:
+- exporter 
 maintainers:
 - email: juan.chimienti@gmail.com
   name: juanchimienti
