--- a/prometheus-redis-exporter/Chart.yaml
+++ b/prometheus-redis-exporter/Chart.yaml
@@ -3,8 +3,7 @@ appVersion: 1.27.0
 description: Prometheus exporter for Redis metrics
 home: https://github.com/oliver006/redis_exporter
 keywords:
-- prometheus
-- redis
+- exporter 
 maintainers:
 - email: arcadie.condrat@gmail.com
   name: acondrat
