--- a/skywalking/templates/es-init.job.yaml
+++ b/skywalking/templates/es-init.job.yaml
@@ -19,7 +19,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{ template "skywalking.name" . }}-es-init"
+  name: "{{ .Release.Name }}-es-init"
   labels:
     app: {{ template "skywalking.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
@@ -28,11 +28,31 @@ metadata:
 spec:
   template:
     metadata:
-      name: "{{ template "skywalking.name" . }}-es-init"
+      name: "{{ .Release.Name }}-es-init"
       labels:
         app: {{ template "skywalking.name" . }}
         component: "{{ template "skywalking.fullname" . }}-job"
     spec:
+      serviceAccountName: {{ template "skywalking.serviceAccountName.oap" . }}
+      {{- if .Values.esInit.nodeAffinity }}
+      affinity:
+      {{- end }}
+      {{- with .Values.esInit.nodeAffinity }}
+        nodeAffinity:
+{{ toYaml . | indent 10 }}
+      {{- end }}
+{{- if .Values.esInit.nodeSelector }}
+      nodeSelector:
+{{ toYaml .Values.esInit.nodeSelector | indent 8 }}
+{{- end }}
+{{- if .Values.esInit.tolerations }}
+      tolerations:
+{{ toYaml .Values.esInit.tolerations | indent 8 }}
+{{- end }}
+{{- if .Values.imagePullSecrets }}
+      imagePullSecrets:
+{{ toYaml .Values.imagePullSecrets | indent 8 }}
+{{- end }}
       restartPolicy: Never
       initContainers:
         {{- include "skywalking.containers.wait-for-es" . | nindent 6 }}
@@ -53,7 +73,7 @@ spec:
 {{- if .Values.elasticsearch.enabled }}
           value: "{{ .Values.elasticsearch.clusterName }}-{{ .Values.elasticsearch.nodeGroup }}:{{ .Values.elasticsearch.httpPort }}"
 {{- else }}
-          value: "{{ .Values.elasticsearch.config.address }}"
+          value: "{{ .Values.elasticsearch.config.host }}:{{ .Values.elasticsearch.config.port.http }}"
 {{- end }}
 {{- if not .Values.elasticsearch.enabled }}
         {{- if .Values.elasticsearch.config.user }}
@@ -68,5 +88,19 @@ spec:
         {{- range $key, $value :=  .Values.oap.env }}
         - name: {{ $key }}
           value: {{ $value | quote }}
+        {{- end }}
+        volumeMounts:
+          {{- if (.Files.Glob "files/conf.d/oap/**") }}
+            {{ range $path, $bytes := .Files.Glob "files/conf.d/oap/**" }}
+            - name: skywalking-oap-override
+              mountPath: {{ print "/skywalking/config/" ($path | replace "files/conf.d/oap/" "") }}
+              subPath: {{ $path | replace "files/conf.d/oap/" "" | b64enc | replace "=" "-" }}
+            {{- end }}
+            {{- end }}
+      volumes:
+        {{- if (.Files.Glob "files/conf.d/oap/**") }}
+        - name: skywalking-oap-override
+          configMap:
+            name: {{ template "skywalking.fullname" . }}-oap-cm-override
         {{- end }}
 {{- end}}
