--- a/skywalking/templates/oap-deployment.yaml
+++ b/skywalking/templates/oap-deployment.yaml
@@ -71,6 +71,10 @@ spec:
       tolerations:
 {{ toYaml .Values.oap.tolerations | indent 8 }}
 {{- end }}
+{{- if .Values.imagePullSecrets }}
+      imagePullSecrets:
+{{ toYaml .Values.imagePullSecrets | indent 8 }}
+{{- end }}
       initContainers:
         {{- if hasPrefix "elasticsearch" .Values.oap.storageType }}
         {{- include "skywalking.containers.wait-for-es" . | nindent 6 }}
@@ -90,10 +94,10 @@ spec:
           initialDelaySeconds: 15
           periodSeconds: 20
         ports:
-        - containerPort: 11800
-          name: grpc
-        - containerPort: 12800
-          name: rest
+        {{- range $key, $value :=  .Values.oap.ports }}
+        - containerPort: {{ $value }}
+          name: {{ $key }}
+        {{- end }}
 {{- if .Values.oap.resources }}
         resources:
 {{ toYaml .Values.oap.resources | indent 10 }}
@@ -112,7 +116,7 @@ spec:
           value: "60"
 {{- end }}
         - name: SW_CLUSTER_K8S_LABEL
-          value: "app={{ template "skywalking.name" . }},component={{ .Values.oap.name }}"
+          value: "{{ template "skywalking.oap.labels" . }}"
         - name: SKYWALKING_COLLECTOR_UID
           valueFrom:
             fieldRef:
@@ -123,7 +127,7 @@ spec:
 {{- if .Values.elasticsearch.enabled }}
           value: "{{ .Values.elasticsearch.clusterName }}-{{ .Values.elasticsearch.nodeGroup }}:{{ .Values.elasticsearch.httpPort }}"
 {{- else }}
-          value: "{{ .Values.elasticsearch.config.address }}"
+          value: "{{ .Values.elasticsearch.config.host }}:{{ .Values.elasticsearch.config.port.http }}"
 {{- end }}
 {{- if not .Values.elasticsearch.enabled }}
         {{- if .Values.elasticsearch.config.user }}
