--- a/skywalking/templates/satellite-cm-override.yaml
+++ b/skywalking/templates/satellite-cm-override.yaml
@@ -13,17 +13,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-  {{- if (.Files.Glob "files/conf.d/oap/**") }}
+{{- if (.Files.Glob "files/conf.d/satellite/**") }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "skywalking.fullname" . }}-oap-cm-override
+  name: {{ template "skywalking.fullname" . }}-satellite-cm-override
   labels:
     app: {{ template "skywalking.name" . }}
-    component: {{ .Values.oap.name }}
+    component: {{ .Values.satellite.name }}
 binaryData:
-  {{ range $path, $bytes := .Files.Glob "files/conf.d/oap/**" }}
-  {{- $path | replace "files/conf.d/oap/" "" | b64enc | replace "=" "-" | indent 2 }}: |
+  {{ range $path, $bytes := .Files.Glob "files/conf.d/satellite/**" }}
+  {{- $path | replace "files/conf.d/satellite/" "" | b64enc | replace "=" "-" | indent 2 }}: |
   {{ $.Files.Get $path | b64enc | indent 4 }}
   {{ end }}
-  {{ end }}
+{{ end }}
