--- a/skywalking/templates/satellite-rolebinding.yaml
+++ b/skywalking/templates/satellite-rolebinding.yaml
@@ -13,17 +13,22 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-  {{- if (.Files.Glob "files/conf.d/oap/**") }}
-apiVersion: v1
-kind: ConfigMap
+{{- if .Values.satellite.enabled }}
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
 metadata:
-  name: {{ template "skywalking.fullname" . }}-oap-cm-override
+  name: {{ template "skywalking.satellite.fullname" . }}
   labels:
     app: {{ template "skywalking.name" . }}
-    component: {{ .Values.oap.name }}
-binaryData:
-  {{ range $path, $bytes := .Files.Glob "files/conf.d/oap/**" }}
-  {{- $path | replace "files/conf.d/oap/" "" | b64enc | replace "=" "-" | indent 2 }}: |
-  {{ $.Files.Get $path | b64enc | indent 4 }}
-  {{ end }}
-  {{ end }}
+    component: "{{ .Values.oap.name }}"
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    heritage: "{{ .Release.Service }}"
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: {{ template "skywalking.satellite.fullname" . }}
+subjects:
+  - kind: ServiceAccount
+    name: {{ template "skywalking.serviceAccountName.satellite" . }}
+    namespace: {{ .Release.Namespace }}
+{{- end }}
