--- a/skywalking/templates/satellite-svc.yaml
+++ b/skywalking/templates/satellite-svc.yaml
@@ -13,17 +13,25 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-  {{- if (.Files.Glob "files/conf.d/oap/**") }}
+{{- if .Values.satellite.enabled }}
 apiVersion: v1
-kind: ConfigMap
+kind: Service
 metadata:
-  name: {{ template "skywalking.fullname" . }}-oap-cm-override
+  name: {{ template "skywalking.satellite.fullname" . }}
   labels:
     app: {{ template "skywalking.name" . }}
-    component: {{ .Values.oap.name }}
-binaryData:
-  {{ range $path, $bytes := .Files.Glob "files/conf.d/oap/**" }}
-  {{- $path | replace "files/conf.d/oap/" "" | b64enc | replace "=" "-" | indent 2 }}: |
-  {{ $.Files.Get $path | b64enc | indent 4 }}
-  {{ end }}
-  {{ end }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    component: "{{ .Values.satellite.name }}"
+    release: {{ .Release.Name }}
+spec:
+  type: {{ .Values.satellite.service.type }}
+  ports:
+  {{- range $key, $value :=  .Values.satellite.ports }}
+  - port: {{ $value }}
+    name: {{ $key }}
+  {{- end }}
+  selector:
+    app: {{ template "skywalking.name" . }}
+    component: "{{ .Values.satellite.name }}"
+    release: {{ .Release.Name }}
+{{- end }}
