--- a/skywalking/values.yaml
+++ b/skywalking/values.yaml
@@ -16,11 +16,14 @@
 # Default values for skywalking.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+
 nameOverride: "skywalking"
 fullnameOverride: "skywalking"
 
 serviceAccounts:
   oap:
+
+imagePullSecrets: []
 
 initContainer:
   image: registry.cn-beijing.aliyuncs.com/kubegemsapp/busybox
@@ -34,10 +37,12 @@ oap:
   dynamicConfigEnabled: false
   image:
     repository: registry.cn-beijing.aliyuncs.com/kubegemsapp/skywalking-oap-server
-    tag: 8.6.0-es7
+    tag: 8.9.1 # Must be set explicitly
     pullPolicy: IfNotPresent
-  storageType: elasticsearch7 
+  storageType: local-path
   ports:
+    # add more ports here if you need, for example
+    # zabbix: 10051
     grpc: 11800
     rest: 12800
   replicas: 2
@@ -50,13 +55,12 @@ oap:
   tolerations: []
   resources: 
     limits:
-      cpu: 4
-      memory: 9Gi
+     cpu: 4 
+     memory: 9Gi
     requests:
-      cpu: 2
-      memory: 4Gi
-  # podAnnotations:
-  #   example: oap-foo
+     cpu: 1 
+     memory: 8Gi
+
   envoy:
     als:
       enabled: false
@@ -73,10 +77,13 @@ ui:
   replicas: 1
   image:
     repository: registry.cn-beijing.aliyuncs.com/kubegemsapp/skywalking-ui
-    tag: 8.6.0
+    tag: 8.9.1 # Must be set explicitly
     pullPolicy: IfNotPresent
   # podAnnotations:
   #   example: oap-foo
+  nodeAffinity: {}
+  nodeSelector: {}
+  tolerations: []
   ingress:
     enabled: false
     annotations: {}
@@ -94,6 +101,10 @@ ui:
     # clusterIP: None
     externalPort: 80
     internalPort: 8080
+    ## nodePort is the port on each node on which this service is exposed when type=NodePort
+    ## Default: auto-allocated port if not specified. 30080 is just an example
+    ##
+    # nodePort: 30080
     ## External IP addresses of service
     ## Default: nil
     ##
@@ -110,10 +121,17 @@ ui:
     ## Limit load balancer source ips to list of CIDRs (where available)
     # loadBalancerSourceRanges: []
 
+esInit:
+  nodeAffinity: {}
+  nodeSelector: {}
+  tolerations: []
+
 elasticsearch:
   enabled: false
   config:               # For users of an existing elasticsearch cluster,takes effect when `elasticsearch.enabled` is false
-    address: elasticsearch:9200  # es service on kubernetes or host
+    port:
+      http: 9200
+    host: elasticsearch # es service on kubernetes or host
     user: ""         # [optional]
     password: ""     # [optional]
   clusterName: "elasticsearch"
@@ -356,3 +374,31 @@ elasticsearch:
     enabled: true
 
   keystore: []
+
+satellite:
+  name: satellite
+  enabled: false
+  image:
+    repository: registry.cn-beijing.aliyuncs.com/kubegemsapp/skywalking-satellite
+    tag: v1.0.0 # Must be set explicitly
+    pullPolicy: IfNotPresent
+  ports:
+    grpc: 11800
+    prometheus: 1234
+  service:
+    type: ClusterIP
+  antiAffinity: "soft"
+  nodeAffinity: {}
+  nodeSelector: {}
+  tolerations: []
+  resources: {}
+    # limits:
+    #   cpu: 4
+    #   memory: 8Gi
+    # requests:
+    #   cpu: 4
+    #   memory: 4Gi
+  podAnnotations:
+    # example: oap-foo
+  env:
+    # more env, please refer to https://skywalking.apache.org/docs/skywalking-satellite/latest/en/setup/readme/#satellite_configyaml
